# intro-to-rust

./: .gitignore  Cargo.toml  Makefile  README.md  book.toml  pandoc.toml  todo.md
.github/workflows/: rust.yml
abstract-factory/src/: dynamic_dispatch.rs  main.rs
adapter/src/: main.rs
builder/: Cargo.toml
chain_of_resposibility/src/: main.rs
code/: Cargo.toml  README.md
code/allocator/: Cargo.toml
code/allocator/src/: debug_allocator.rs  lib.rs  mmap_allocator.rs
code/allocator/src/simple_alloc/: allocator.rs  free.rs  malloc.rs  mmap_allocator.rs  mod.rs  realloc.rs
code/arc_module/: Cargo.toml
code/asynchronous/: Cargo.toml
code/asynchronous/src/: lib.rs
code/atomic_internals/: Cargo.toml  build.rs
code/atomic_internals/src/: backoff.rs  cache_padded.rs  clh_lock.rs  lib.rs  lock.rs  mcs_lock.rs  mcs_parking_lock.rs  spin_lock.rs  ticket_lock.rs
code/cds/: Cargo.toml
code/channel/: Cargo.toml
code/closure/: Cargo.toml
code/closure/src/: fn2.rs  lib.rs
code/collections/: Cargo.toml
code/collections/src/: vec_new.rs
code/concurrency/: Cargo.toml
code/containers/: Cargo.toml
code/crates/: Cargo.toml
code/crates/src/: script.rs
code/design_patterns/behavioral/: Cargo.toml
code/design_patterns/behavioral/chain-of-responsibility/: Cargo.toml
code/design_patterns/behavioral/chain-of-responsibility/src/: main.rs
code/design_patterns/behavioral/chain-of-resposibility/: Cargo.toml
code/design_patterns/behavioral/mediator/: Cargo.toml
code/design_patterns/behavioral/mediator/src/: main.rs
code/design_patterns/behavioral/memento/src/: main.rs
code/design_patterns/behavioral/strategy/: Cargo.toml
code/design_patterns/behavioral/template-method/: Cargo.toml
code/design_patterns/creational/: Cargo.toml
code/design_patterns/creational/abstract-factory/: Cargo.toml
code/design_patterns/creational/abstract-factory/src/: generic.rs
code/design_patterns/creational/prototype/: Cargo.toml
code/design_patterns/creational/singleton/: Cargo.toml
code/design_patterns/structural/: Cargo.toml
code/design_patterns/structural/adapter/src/: main.rs
code/design_patterns/structural/composite/src/: main.rs
code/design_patterns/structural/decorator/: Cargo.toml
code/design_patterns/structural/facade/: Cargo.toml
code/design_patterns/structural/proxy/: Cargo.toml
code/design_patterns/structural/proxy/src/: main.rs
code/enums/: Cargo.toml
code/enums/src/: lib.rs  option2.rs
code/error_handling/: Cargo.toml
code/error_handling/src/: data_store_error.rs  error.rs  lib.rs  parse_int_error.rs
code/expressions/: Cargo.toml
code/ffi/: Cargo.toml
code/ffi/src/: lib.rs
code/fs/: Cargo.toml
code/iterators/: Cargo.toml
code/lifetimes/: Cargo.toml
code/lifetimes/src/: lib.rs
code/linux_ipc/: Cargo.toml
code/linux_ipc/assets/shaders/: texture.wgsl
code/linux_ipc/src/: crab_sim.rs  error.rs  keyboard_reader.rs  keycode.rs  lib.rs  msg.rs  process.rs  signal_keycode.rs  termios.rs
code/linux_ipc/src/crab_sim/: init.rs  mod.rs.disable  state.rs  texture.rs  vertex.rs
code/lock_based_concurrency/: Cargo.toml
code/lock_free_concurrency/: Cargo.toml
code/macros/: Cargo.toml
code/macros/src/: arith2.rs  lib.rs
code/mem_module/: Cargo.toml
code/mem_module/src/: lib.rs  replace-fn.rs  swap-fn.rs  take-fn.rs
code/memory/: .gitignore  Cargo.toml
code/memory_basic/: Cargo.toml
code/memory_basic/src/: boxed.rs  dynamic-drop.c  file.rs  file_desc.rs  lib.rs  mutex.rs  rc.rs  static-drop.c  tcp.rs  vec.rs
code/nightly-build/: Cargo.toml
code/nightly_build/: Cargo.toml  README.md
code/nightly_build/src/: deref2.rs  lib.rs
code/ownership/: Cargo.toml
code/ownership/src/: copy_person.cpp  lib.rs  move_person.cpp  move_string.cpp  reborrow.rs  slice.rs
code/pattern_matching/: Cargo.toml
code/perf/: Cargo.toml
code/primtives/: Cargo.toml
code/primtives/src/: color.rs  lib.rs
code/ptr_module/: Cargo.toml
code/ptr_module/src/: mmap.rs  replace-fn.rs  swap-fn.rs
code/references/: Cargo.toml
code/runtime/: Cargo.toml
code/shared_mutable_state/: Cargo.toml
code/smart_pointers/: Cargo.toml
code/src/: lib.rs  point.rs  protocol_level.rs
code/stdlib/: Cargo.toml
code/strings/: Cargo.toml
code/structs/: Cargo.toml
code/structs/src/: lib.rs  rectangle.rs
code/tokio_crate/: Cargo.toml
code/tokio_crate/src/: lib.rs
code/traits/: Cargo.toml
code/traits/src/: complex.rs  float.rs  float_eq.rs  iterator-trait.rs  lib.rs  margin.rs  point.rs  point2.rs  protocol_level.rs
code/unions/: Cargo.toml
code/unions/src/: lib.rs
code/unsafe_code/: Cargo.toml
cpp/: CMakeLists.txt
cpp/behavioral/: CMakeLists.txt  chain_of_responsibilities.cpp  command.cpp  mediator.cpp  observer.cpp
cpp/creational/: CMakeLists.txt  abstract_factory.cpp  builder.cpp  factory_method.cpp  prototype.cpp  simple_factory.cpp  singleton.cpp
cpp/structural/: CMakeLists.txt  adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
design-patterns/: Cargo.toml
design-patterns/adapter/: Cargo.toml
design-patterns/bridge/: Cargo.toml
design-patterns/chain_of_resposibility/: Cargo.toml
design-patterns/command/: Cargo.toml
design-patterns/composite/: Cargo.toml
design-patterns/factory-method/: Cargo.toml
design-patterns/flyweight/: Cargo.toml
design-patterns/iterator/: Cargo.toml
design-patterns/mediator/: Cargo.toml
design-patterns/observer/: Cargo.toml
design-patterns/simple-factory/: Cargo.toml
mediator/: Cargo.toml
memento/: Cargo.toml
simple-factory/: Cargo.toml
singleton/: Cargo.toml
singleton/src/: lazy.rs  (+2 more)
src/: README.md  SUMMARY.md  algs.md  part1-lang.md  part2-custom-types.md  part3-mem-concurrency-and-async.md  part3-std.md  part4-mem.md  part5-concurrency.md  part5-engineering.md  part6-async.md  part6-rust-language-eco-env.md  part7-engineering.md  part8-language-eco.md  ref.md  references.md
state/: Cargo.toml
template/: Cargo.toml
theme/: index.hbs
tools/: clippy.sh  generate-pdf.sh  install-pdf-deps.sh  pre-commit.sh
(+1114 files in other folders)
