[workspace]
resolver = "2"

members = [
    "code/asynchronous",
    "code/closure",
    "code/concurrency",
    "code/containers",
    "code/design_patterns/behavioral/*",
    "code/design_patterns/creational/*",
    "code/design_patterns/structural/*",
    "code/enums",
    "code/error_handling",
    "code/expressions",
    "code/ffi",
    "code/iterators", 
    "code/lifetimes",
    "code/macros",
    "code/memory",
    "code/ownership",
    "code/pattern_matching",
    "code/perf",
    "code/primtives",
    "code/references",
    "code/smart_pointers",
    "code/stdlib",
    "code/strings",
    "code/structs",
    "code/traits"
]

exclude = [
    "book",
    "src",
    "tools",
]
