[workspace]
resolver = "2"

members = [
    "code/arc_module",
    "code/asynchronous",
    "code/closure",
    "code/collections",
    "code/concurrency",
    "code/crates",
    "code/design_patterns/behavioral",
    "code/design_patterns/creational",
    "code/design_patterns/structural",
    "code/enums",
    "code/error_handling",
    "code/expressions",
    "code/ffi",
    "code/fs",
    "code/iterators", 
    "code/lifetimes",
    "code/linux_ipc",
    "code/macros",
    "code/mem_module",
    "code/memory",
    "code/memory_basic",
    "code/ownership",
    "code/pattern_matching",
    "code/perf",
    "code/primtives",
    "code/ptr_module",
    "code/references",
    "code/smart_pointers",
    "code/stdlib",
    "code/strings",
    "code/structs",
    "code/tokio_crate",
    "code/traits",
    "code/unsafe_code"
    ]

exclude = [
    "book",
    "src",
    "tools",
]
