[package]
name = "demos"
description = "Demo code for rust book"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/xushaohua/rust-book"
rust-version = "1.76.0"
publish = false

[dependencies]
futures = "0.3.30"