[package]
name = "linux_ipc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
log = "0.4.22"
nc = "0.8.23"
pollster = "0.3.0"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
wgpu = "0.17.2"
winit = "0.28.7"

[[bin]]
name = "linux_ipc-pipe"
path = "src/bin/pipe.rs"

[[bin]]
name = "linux_ipc-barely-sim"
path = "src/bin/barely-sim.rs"

[[bin]]
name = "linux_ipc-fifo-consumer"
path = "src/bin/fifo-consumer.rs"

[[bin]]
name = "linux_ipc-fifo-producer"
path = "src/bin/fifo-producer.rs"

[[bin]]
name = "linux_ipc-pipe-text"
path = "src/bin/pipe-text.rs"

[[bin]]
name = "linux_ipc-signal-consumer"
path = "src/bin/signal-consumer.rs"

[[bin]]
name = "linux_ipc-signal-producer"
path = "src/bin/signal-producer.rs"

[[bin]]
name = "linux_ipc-uds-producer"
path = "src/bin/uds-producer.rs"

[[bin]]
name = "linux_ipc-uds-consumer"
path = "src/bin/uds-consumer.rs"
