[package]
name = "linux_ipc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.22"
nc = "0.8.23"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"

[[bin]]
name = "linux_ipc-pipe"
path = "src/bin/pipe.rs"

[[bin]]
name = "linux_ipc-barely-sim"
path = "src/bin/barely-sim.rs"

[[bin]]
name = "linux_ipc-fifo-consumer"
path = "src/bin/fifo-consumer.rs"

[[bin]]
name = "linux_ipc-fifo-producer"
path = "src/bin/fifo-producer.rs"

[[bin]]
name = "linux_ipc-signal-consumer"
path = "src/bin/signal-consumer.rs"

[[bin]]
name = "linux_ipc-signal-producer"
path = "src/bin/signal-producer.rs"

[[bin]]
name = "linux_ipc-uds-producer"
path = "src/bin/uds-producer.rs"

[[bin]]
name = "linux_ipc-uds-consumer"
path = "src/bin/uds-consumer.rs"
